feat: Integrate Neo4j GDS for PageRank and community detection, enhancing graph visualization with analytics results.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - "7687:7687" # Bolt protocol
     environment:
       - NEO4J_AUTH=${NEO4J_USERNAME:-neo4j}/${NEO4J_PASSWORD:-password}
-      - NEO4J_PLUGINS=["apoc"]
+      # Enable APOC and Graph Data Science plugins
+      - NEO4J_PLUGINS=["apoc", "graph-data-science"]
     volumes:
       - neo4j_data:/data
       - neo4j_logs:/logs
