--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pyvis>=0.3.0",
     "python-dotenv>=1.0.0",
     "graphdatascience>=1.7.0",
+    "pyyaml>=6.0",
 ]
 
 [tool.uv]
