--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,19 @@ dependencies = [
 dev-dependencies = [
     "ruff>=0.8.0",
     "pre-commit>=4.0.0",
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.24.0",
+    "testcontainers[neo4j]>=4.0.0",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
+python_functions = "test_*"
+asyncio_mode = "auto"
+addopts = "-v --tb=short"
+markers = [
+    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
 ]
 
 [tool.ruff]
@@ -37,6 +50,8 @@ ignore = ["E501"]
 [tool.ruff.lint.per-file-ignores]
 # Ignorar imports no usados en __init__.py
 "__init__.py" = ["F401"]
+# Allow assert in tests
+"tests/**/*.py" = ["S101"]
 
 [tool.ruff.format]
 quote-style = "double"
