--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "graphdatascience>=1.7.0",
     "pyyaml>=6.0",
+    "pydantic-settings>=2.12.0",
 ]
 
 [tool.uv]
